--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-    </head>
+        <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>    </head>
     <body>
 
         <h1>Roper21</h1>
