--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h1>Roper21</h1>
         <img/>
         
+        <body>
+            <ul id="item-list"></ul>
+        </body>
+
         <script>
             // Your web app's Firebase configuration
             // For Firebase JS SDK v7.20.0 and later, measurementId is optional
